--- a/.doc_gen/metadata/sts_metadata.yaml
+++ b/.doc_gen/metadata/sts_metadata.yaml
@@ -31,7 +31,7 @@ sts_AssumeRole:
           excerpts:
             - description:
               snippet_tags:
-                - ruby.example_code.sts.AssumeRole
+                - ruby.sts.AssumeRole
     JavaScript:
       versions:
         - sdk_version: 3
