Updates to workflow.

--- a/dotnetv3/S3/scenarios/ObjectLockScenario/ObjectLockWorkflow/settings.json
+++ b/dotnetv3/S3/scenarios/ObjectLockScenario/ObjectLockWorkflow/settings.json
@@ -1,3 +1,4 @@
 {
-  "resourcePrefix": "dotnets3locktest"
+  "resourcePrefix": "dotnet-s3-lock-example",
+  "exampleFileName": "dotnet-example-file.txt"
 }
