JavaScript (v3): Bedrock runtime agent - re-write tests, provide better example data, and reformat.

--- a/javascriptv3/example_code/bedrock-agent-runtime/package.json
+++ b/javascriptv3/example_code/bedrock-agent-runtime/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "type": "module",
   "scripts": {
-    "integration-test": "vitest run **/*.integration.test.js"
+    "test": "vitest run **/*.unit.test.js"
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-agent-runtime": "^3.501.0"
