--- a/.doc_gen/metadata/bedrock-agent-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-agent-runtime_metadata.yaml
@@ -12,5 +12,14 @@ bedrock-agent-runtime_InvokeAgent:
             - description: Invoke an agent.
               snippet_tags:
                 - python.example_code.bedrock-agent-runtime.InvokeAgent
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-agent-runtime
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/bedrock-agent-runtime/actions/invoke-agent.js
   services:
     bedrock-agent-runtime: {InvokeAgent}
