--- a/.github/workflows/dotnet-check.yml
+++ b/.github/workflows/dotnet-check.yml
@@ -17,7 +17,13 @@ jobs:
             6.0.x
       - name: Checkout files
         uses: actions/checkout@v3
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+          files: "dotnetv3/**/*.cs"
       - name: Build check
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           cd dotnetv3
           dotnet build -v=q --property WarningLevel=0 /clp:ErrorsOnly
